Added auth section to login for comments

--- a/blog/templates/blog/detail_post.html
+++ b/blog/templates/blog/detail_post.html
@@ -46,6 +46,9 @@
       </form>
     </section>
   {% else %}
+    <section id="auth-warning">
+      <h1>Залогинься, чтоб была возможность оставлять комментарий 🙂</h1>
+    </section>
     {% comment %} TODO Some form that tells you need to auth in order to post comments  {% endcomment %}
   {% endif %}
 
