--- a/blog/static/blog/detail_post.css
+++ b/blog/static/blog/detail_post.css
@@ -141,6 +141,17 @@ main {
   font-size: 1rem;
 }
 
+#auth-warning {
+  margin: 3rem auto;
+  width: 90%;
+  max-width: 40rem;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  padding: 1rem;
+  text-align: center;
+}
+
 .errorlist {
   list-style: none;
   margin: 0.5rem 0;
